--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,10 +40,12 @@ jobs:
     - name: Publish app
       run: dotnet publish -c Release
 
-    # Replace base href
-    - name: Replace base href
-      run: sed -i 's|<base href=".*" />|<base href="/MyBlazorApp/" />|g' ${{ env.PUBLISH_DIR }}/index.html
-
+    # .Rewrite href Base
+    - name: Rewrite base href
+      uses: SteveSandersonMS/ghaction-rewrite-base-href@v1
+      with:
+        html_path: ${{ env.PUBLISH_DIR }}/index.html
+        base_href: BlazorWasmApp
 
     # add .nojekyll file to tell GitHub pages to not treat this as a Jekyll project. (Allow files and folders starting with an underscore)
     - name: Add .nojekyll file
